version 2.8.1b21 - 1 Nov 2004
	check for errors while copying files in fspd.
	removed all the PROTOX macros junk. Tools for analyzing C source
	  code works with fsp codebase now as result.
	added rename command
	add fmvcmd client for renaming files
	reorder some checks in configure.ac
	added one testcase to the path test suite
	client library did not sended any passwords to server
	util_abs_path now appends \npassword to full path
	server do not send correctly \0 terminated directory readmes
	PROTOCOL: Added information about optionally large sized packets,
	  transport and information about FSP project URL.
	PROTOCOL: checked/repaired by ispell :)
	PROTOCOL: added more details about packet checksuming.
	Lamerpack: removed port 21 from list of recommended ports.
	Lamerpack: avoid easy detection by lamers by disabling ver command
	do not print password to stdout in fcdcmd
	PROTOCOL: Add note to clients writers that two replies from server
	  can contain extra data even if server is not able to handle extra
	  data packets on input.
	FreeBSD needs /usr/local/lib in LDFLAGS to make Electric Fence
	  correctly detected by autotools
	PROTOCOL: define 5th bit in version flags - support for xtra data
	  on input
	server.c: send accept xtra data flag set
	fver: print difference between max. supported payload and
	  preffered payload size
	when directory has no readme, do not send any regular data block
	  at all. Previous versions sends one null byte
	printpro.c - print readme only if nonzero sized

version 2.8.1b20 - 26 Oct 2004
	Added pidfile.[c|h] from FreeBSD and modified it to fit in (hoaxter)
	Added pidfile support, config option is 'pidlogname' (hoaxter)
	Replaced .file information from INSTALL with a hint to man 1 fspd (hoaxter)
	PROTOCOL: Added security section, fixed method of computing of checksums        fspd: unlink filecache.c from build
	conf: commented dangerours settings for win32 platform which can