@@ -19,3 +19,4 @@ fstatcmd
 fver
 .deps
 fspprof.c
+fmvcmd
