@@ -80,8 +80,10 @@ vercommand on
 dircache 100
 
 # 'use_prebuild_dirlists' allows to load/save prebuilded directories
-# listing from filesystem. It is a good idea to allow that.
-# Do not use on Win32 system.
+# listing from filesystem. It is a good idea to allow that, because it
+# helps server performance. Disable it only if you dislike .FSP_CONTENT
+# file in every directory.
+# Do not use on Win32 system!
 #use_prebuild_dirlists yes
 
 # The 'statcache' command controls how many directories are placed into
