@@ -1,3 +1,8 @@
+	print key=, seq= in fspd debugs with fixed width for easy reading
+	added BUGS and HISTORY sections to fspscan.1 manual page
+	Lamerpack: disable most of command line options in fspd and print
+	  simpler help message.
+
 version 2.8.1b21 - 1 Nov 2004
 	check for errors while copying files in fspd.
 	removed all the PROTOX macros junk. Tools for analyzing C source
